--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -650,7 +650,7 @@ a:focus,
 
 .skills {
     margin-top:60px;
-}  
+}
 
 .chart {
   position: relative;
@@ -682,7 +682,7 @@ a:focus,
 
 .skills h2 {
     margin:0 0 80px;
-    font-family:'Titillium Web';
+    font-family:'Roboto';
     font-size:24px;
     font-weight:400;
 }
