--- a/css/meflat-blue.css
+++ b/css/meflat-blue.css
@@ -682,7 +682,7 @@ a:focus,
 
 .skills h2 {
     margin:0 0 80px;
-    font-family:'Roboto';
+    font-family:'Titillium Web';
     font-size:24px;
     font-weight:400;
 }
